--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -16,6 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="20dp" />
 
+    <com.example.xxx.customview.view.roundWave
+        android:id="@+id/roundWave"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <com.example.xxx.customview.view.XfermodeView
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
+
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
