--- a/src/main/res/layout/activity_wave_view.xml
+++ b/src/main/res/layout/activity_wave_view.xml
@@ -9,4 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.xxx.customview.WaveViewActivity">
 
+    <com.example.xxx.customview.view.WaveView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
